--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
     "react-remove-scroll": "^2.5.7",
+    "react-share": "^5.1.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
