--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "floyd-feske-music",
-  "version": "0.1.0",
+  "version": "0.9.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-focus-lock": "^2.11.2",
+    "react-google-recaptcha": "^3.1.0",
     "react-h5-audio-player": "^3.9.1",
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
