--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "embla-carousel-react": "^8.0.0",
     "firebase": "^10.12.2",
     "next": "14.1.3",
+    "next-seo": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
     "react-focus-lock": "^2.11.2",
